discussion/kv_engine/168009/168009_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Test Clang-tidy fix

Change-Id: I5a570e02ea8977040ec70d7987b4e189bffaeb8c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-12-21 16:08:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-12-21 16:21:32.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42550/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/42550/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17328/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/17328/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/4306/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14608/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include <spdlog/logger.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14608/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14608/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15408/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/15408/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36065/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/13438/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/16254/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4248/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/16546/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24662/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
